dts: versal_net: Remove i3c node from se7 dtb
We can enable either i2c or i3c at a time, not both. To enable i3c,
I2C_I3C_CTRL0 in LPX_IOU_SECURE_SLCR has to be set 1. Which is 0 by
default (which means it is i2c mode only). So disable I3C nodes in
default se7 dtb.

To use i3c masters, update LPX_IOU_SECURE_SLCR register and use
overlay x-prc-09-i3c-revA.dts.

Signed-off-by: Jay Buddhabhatti <jay.buddhabhatti@xilinx.com>

--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -451,6 +451,7 @@ dtb-$(CONFIG_ARCH_VERSAL_NET) += \
 	versal-net-ipp-rev1.9-ospi.dtb \
 	versal-net-vn-p-b2197-00-revA.dtb \
 	x-prc-07-revA.dtbo \
+	x-prc-07-i3c-revA.dtbo \
 	x-prc-09-revA.dtbo \
 	x-prc-09-i3c-revA.dtbo \
 	versal-net-mini.dtb \
