--- a/arch/arm/dts/x-prc-09-i3c-revA.dts
+++ b/arch/arm/dts/x-prc-09-i3c-revA.dts
@@ -1,4 +1,17 @@
+// SPDX-License-Identifier: GPL-2.0
+/*
+ * dts file for Xilinx ZynqMP VN-P-B2197 (Tenzing2) X-PRC-09 RevA with I3C enabled
+ *
+ * (C) Copyright 2022, Advanced Micro Devices, Inc.
+ *
+ * Jay Buddhabhatti <jay.buddhabhatti@xilinx.com>;
+ */
+
 #include "x-prc-09-revA.dts"
+
+&{/} {
+	model = "X-PRC-09 i3c revA";
+};
 
 &i2c0 {
 	status = "disabled";
