versal-net: Remove versal compatibility from eMMC node
Remove "xlnx,versal-8.9a" compatibility string from eMMC node.

Signed-off-by: Ashok Reddy Soma <ashok.reddy.soma@amd.com>

--- a/arch/arm/dts/versal-net.dtsi
+++ b/arch/arm/dts/versal-net.dtsi
@@ -456,7 +456,7 @@
 		};
 
 		sdhci1: mmc@f1050000 {
-			compatible = "xlnx,versal-net-5.1-emmc", "xlnx,versal-8.9a",
+			compatible = "xlnx,versal-net-5.1-emmc",
 				     "arasan,sdhci-8.9a";
 			status = "disabled";
 			reg = <0 0xf1050000 0 0x10000>;
