arm64: versal-net: Use amd.com email instead of xilinx one
Use amd.com email in new versal-net dts files.

Signed-off-by: Michal Simek <michal.simek@amd.com>

--- a/arch/arm/dts/versal-net-vn-p-b2197-00-revA.dts
+++ b/arch/arm/dts/versal-net-vn-p-b2197-00-revA.dts
@@ -4,7 +4,7 @@
  *
  * (C) Copyright 2022, Advanced Micro Devices, Inc.
  *
- * Michal Simek <michal.simek@xilinx.com>
+ * Michal Simek <michal.simek@amd.com>
  */
 
 #include "versal-net.dtsi"
