--- a/arch/arm/dts/versal-net-ipp-rev1.9.dts
+++ b/arch/arm/dts/versal-net-ipp-rev1.9.dts
@@ -500,7 +500,7 @@
 			reg = <0 0xf1030000 0 0x1000>;
 			interrupts = <0 183 4>;
 			clock-names = "ref_clk", "pclk";
-			num-cs = <1>;
+			num-cs = <2>;
 			is-dual = <1>;
 			spi-rx-bus-width = <4>;
 			spi-tx-bus-width = <4>;
@@ -511,7 +511,8 @@
 
 			flash@0 {
 				compatible = "micron,m25p80", "jedec,spi-nor";
-				reg = <0>;
+				reg = <0>, <1>;
+				parallel-memories = /bits/ 64 <0x8000000 0x8000000>; /* 128MB */
 				#address-cells = <1>;
 				#size-cells = <1>;
 				spi-tx-bus-width = <1>;
