--- a/arch/arm/dts/versal-vc-p-a2197-00-revA-x-prc-01-revA.dts
+++ b/arch/arm/dts/versal-vc-p-a2197-00-revA-x-prc-01-revA.dts
@@ -43,7 +43,7 @@
 
 &qspi {
 	status = "okay"; /* u93 and u92 */
-	num-cs = <0x1>;
+	num-cs = <2>;
 	is-dual = <0x1>;
 	spi-rx-bus-width = <4>;
 	spi-tx-bus-width = <4>;
@@ -52,7 +52,8 @@
 		compatible = "m25p80", "jedec,spi-nor";
 		#address-cells = <1>;
 		#size-cells = <1>;
-		reg = <0x0>;
+		reg = <0>, <1>;
+		parallel-memories = /bits/ 64 <0x8000000 0x8000000>; /* 128MB */
 		spi-tx-bus-width = <4>;
 		spi-rx-bus-width = <4>;
 		spi-max-frequency = <35000000>;
