--- a/arch/arm/dts/versal-vc-p-a2197-00-revA-x-prc-04-revA.dts
+++ b/arch/arm/dts/versal-vc-p-a2197-00-revA-x-prc-04-revA.dts
@@ -71,7 +71,7 @@
 
 &qspi {
 	status = "okay"; /* u93 and u92 and u161 and u160 */
-	num-cs = <1>;
+	num-cs = <2>;
 	is-dual = <0>;
 	is-stacked = <1>;
 	spi-rx-bus-width = <4>;
@@ -81,7 +81,8 @@
 		#address-cells = <1>;
 		#size-cells = <1>;
 		compatible = "m25p80", "jedec,spi-nor"; /* 512MB */
-		reg = <0>;
+		reg = <0>, <1>;
+		stacked-memories = /bits/ 64 <0x8000000 0x8000000>; /* 128MB */
 		spi-tx-bus-width = <4>;
 		spi-rx-bus-width = <4>;
 		spi-max-frequency = <108000000>;
