arm64: versal: Remove clk_ignore_unused flag from DTs
All PL IPs should handle clock self that there is no reason not to disable
unused clocks by default. This should finally open all problematic cases
where PL IP is not handling clocks self.
If there is a need for any workaround fclk nodes should be used instead.

Signed-off-by: Michal Simek <michal.simek@amd.com>
State: not-upstreamable

--- a/arch/arm/dts/versal-net-vn-p-b2197-00-revA.dts
+++ b/arch/arm/dts/versal-net-vn-p-b2197-00-revA.dts
@@ -20,7 +20,7 @@
 	};
 
 	chosen {
-		bootargs = "earlycon=pl011,mmio32,0xf1920000 console=ttyAMA0,115200n8 clk_ignore_unused root=/dev/ram0 rw";
+		bootargs = "earlycon=pl011,mmio32,0xf1920000 console=ttyAMA0,115200n8 root=/dev/ram0 rw";
 		stdout-path = "serial0:115200n8";
 	};
 
