--- a/arch/arm/dts/versal-net-vn-x-b2197-00-revA.dts
+++ b/arch/arm/dts/versal-net-vn-x-b2197-00-revA.dts
@@ -35,7 +35,7 @@
 	};
 
 	chosen {
-		bootargs = "console=ttyAMA1,115200 clk_ignore_unused";
+		bootargs = "console=ttyAMA1,115200";
 		stdout-path = "serial1:115200";
 	};
 
