--- a/arch/arm/dts/versal-vc-p-a2197-00-revA-x-prc-05-revA.dts
+++ b/arch/arm/dts/versal-vc-p-a2197-00-revA-x-prc-05-revA.dts
@@ -18,7 +18,7 @@
 	model = "Xilinx Versal A2197 Processor board revA - x-prc-05 revA";
 
 	chosen {
-		bootargs = "console=ttyAMA0 earlycon=pl011,mmio32,0xFF000000,115200n8 clk_ignore_unused";
+		bootargs = "console=ttyAMA0 earlycon=pl011,mmio32,0xFF000000,115200n8";
 		stdout-path = "serial0:115200";
 	};
 
