--- a/arch/arm/dts/versal-vck5000-revA.dts
+++ b/arch/arm/dts/versal-vck5000-revA.dts
@@ -16,7 +16,7 @@
 	model = "Xilinx Versal vck5000 board revA";
 
 	chosen {
-		bootargs = "console=ttyAMA0 earlycon=pl011,mmio32,0xFF000000,115200n8 clk_ignore_unused";
+		bootargs = "console=ttyAMA0 earlycon=pl011,mmio32,0xFF000000,115200n8";
 		stdout-path = "serial0:115200";
 	};
 
