arm64: versal2: Add support for AMD Versal Gen 2
Add support for AMD Versal Gen 2. SoC is based on Cortex-a78ae 4 cluster/2
cpu core each. A lot of IPs are shared with previous families. There are
couple of new IP blocks where the most interesting from user point of view
is UFS.

Signed-off-by: Michal Simek <michal.simek@amd.com>
Link: https://lore.kernel.org/r/bc2b70831ce1031bd0fac32357bff84936e1310f.1716994063.git.michal.simek@amd.com
State: upstream (40f5046c221a7b2719c49b51acefe12914b213e5)
[michals: s/SCSI/DM_SCSI/, defconfig sync]

--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -528,6 +528,8 @@ dtb-$(CONFIG_ARCH_VERSAL) += \
 	versal-x-ebm-02-revA.dtbo \
 	versal-x-ebm-03-revA.dtbo \
 	xilinx-versal-virt.dtb
+dtb-$(CONFIG_ARCH_VERSAL2) += \
+	amd-versal2-virt.dtb
 dtb-$(CONFIG_ARCH_VERSAL_NET) += \
 	versal-net-vn-p-b2197-00-revA.dtb \
 	versal-net-vn-x-b2197-00-revA.dtb \
