--- a/arch/arm/dts/versal-vhk158-revA.dts
+++ b/arch/arm/dts/versal-vhk158-revA.dts
@@ -55,7 +55,7 @@
 
 &ospi { /* PMC MIO0 - 12, U297 MT35XU02G */
 	status = "okay";
-	compatible = "xlnx,versal-ospi-1.0", "cadence,qspi", "cdns,qspi-nor";
+	compatible = "xlnx,versal-ospi-1.0", "cdns,qspi-nor";
 	bus-num = <2>;
 	num-cs = <1>;
 	#address-cells = <1>;
