--- a/configs/amd_versal2_mini_defconfig
+++ b/configs/amd_versal2_mini_defconfig
@@ -11,7 +11,7 @@ CONFIG_NR_DRAM_BANKS=3
 CONFIG_HAS_CUSTOM_SYS_INIT_SP_ADDR=y
 CONFIG_CUSTOM_SYS_INIT_SP_ADDR=0xBBF20000
 CONFIG_ENV_SIZE=0x80
-CONFIG_DEFAULT_DEVICE_TREE="amd-versal2-mini"
+CONFIG_DEFAULT_DEVICE_TREE="versal2-mini"
 CONFIG_SYS_LOAD_ADDR=0xBBF80000
 CONFIG_DEBUG_UART_BASE=0xf1920000
 CONFIG_DEBUG_UART_CLOCK=100000000
