arm64: versal2: Add missing DTs and defconfigs
Add DTs and defconfigs for spp and emu configurations.

Signed-off-by: Michal Simek <michal.simek@amd.com>

--- a/configs/amd_versal2_emu_defconfig
+++ b/configs/amd_versal2_emu_defconfig
@@ -1,11 +1,11 @@
 CONFIG_ARM=y
-CONFIG_COUNTER_FREQUENCY=375000
+CONFIG_COUNTER_FREQUENCY=112203
 CONFIG_POSITION_INDEPENDENT=y
 CONFIG_SYS_INIT_SP_BSS_OFFSET=1572864
 CONFIG_ARCH_VERSAL2=y
 CONFIG_TEXT_BASE=0x8000000
 CONFIG_SYS_MALLOC_F_LEN=0x100000
-CONFIG_DEFAULT_DEVICE_TREE="versal2-spp-mmd-rev0.5-el2"
+CONFIG_DEFAULT_DEVICE_TREE="versal2-emu-rev0.4-el2"
 CONFIG_OF_LIBFDT_OVERLAY=y
 CONFIG_DM_RESET=y
 CONFIG_DEBUG_UART_BASE=0xf1920000
@@ -22,9 +22,10 @@ CONFIG_DISTRO_DEFAULTS=y
 CONFIG_BOOTDELAY=5
 # CONFIG_ARCH_FIXUP_FDT_MEMORY is not set
 CONFIG_USE_PREBOOT=y
+# CONFIG_DISPLAY_CPUINFO is not set
 CONFIG_BOARD_EARLY_INIT_R=y
 CONFIG_CLOCKS=y
-CONFIG_SYS_PROMPT="versal2> "
+CONFIG_SYS_PROMPT="versal2 EMU> "
 CONFIG_SYS_MAXARGS=64
 CONFIG_SYS_PBSIZE=2073
 CONFIG_SYS_BOOTM_LEN=0x6400000
@@ -36,13 +37,13 @@ CONFIG_SYS_ALT_MEMTEST=y
 CONFIG_CMD_SHA1SUM=y
 CONFIG_CMD_CLK=y
 CONFIG_CMD_DFU=y
+# CONFIG_CMD_FLASH is not set
 CONFIG_CMD_GPIO=y
 CONFIG_CMD_I2C=y
 CONFIG_CMD_MMC=y
 CONFIG_CMD_MTD=y
 CONFIG_CMD_SF_TEST=y
 CONFIG_CMD_SPI=y
-CONFIG_CMD_UFS=y
 CONFIG_CMD_USB=y
 CONFIG_BOOTP_MAY_FAIL=y
 CONFIG_BOOTP_BOOTFILESIZE=y
@@ -62,9 +63,6 @@ CONFIG_CMD_MTDPARTS=y
 CONFIG_CMD_UBI=y
 CONFIG_PARTITION_TYPE_GUID=y
 CONFIG_OF_BOARD=y
-CONFIG_OF_LIST="versal2-spp-mmd-rev0.5-el2 versal2-spp-rev0.4-el2 versal2-spp-rev0.3-el2 versal2-qemu-rev0.1-el3 versal2-qemu-rev0.1-el2"
-CONFIG_DTB_RESELECT=y
-CONFIG_MULTI_DTB_FIT=y
 CONFIG_SYS_REDUNDAND_ENVIRONMENT=y
 CONFIG_SYS_RELOC_GD_ENV_ADDR=y
 CONFIG_NET_RANDOM_ETHADDR=y
@@ -75,7 +73,6 @@ CONFIG_TFTP_BLOCKSIZE=4096
 CONFIG_CLK_CCF=y
 CONFIG_CLK_SCMI=y
 CONFIG_DFU_RAM=y
-CONFIG_ARM_FFA_TRANSPORT=y
 CONFIG_DM_I2C=y
 CONFIG_SYS_I2C_CADENCE=y
 CONFIG_I2C_MUX=y
@@ -114,6 +111,7 @@ CONFIG_PHY_GIGE=y
 CONFIG_XILINX_AXIEMAC=y
 CONFIG_ZYNQ_GEM=y
 CONFIG_POWER_DOMAIN=y
+CONFIG_SCMI_POWER_DOMAIN=y
 CONFIG_RESET_SCMI=y
 CONFIG_DM_SCSI=y
 CONFIG_DEBUG_UART_PL011=y
@@ -144,8 +142,6 @@ CONFIG_USB_GADGET_VENDOR_NUM=0x03FD
 CONFIG_USB_GADGET_PRODUCT_NUM=0x0300
 CONFIG_USB_GADGET_DOWNLOAD=y
 CONFIG_USB_FUNCTION_THOR=y
-CONFIG_UFS=y
-CONFIG_CADENCE_UFS=y
 CONFIG_VIRTIO_MMIO=y
 CONFIG_VIRTIO_NET=y
 CONFIG_VIRTIO_BLK=y
