arm64: versal2: Add missing DTs and defconfigs
Add DTs and defconfigs for spp and emu configurations.

Signed-off-by: Michal Simek <michal.simek@amd.com>
[michal: Squashed with
arm64: versal2: Enable SCSI
arm64: versal2: Enable DM command
arm64: versal2: fix the USB ref clock frequency
arm: dts: Add cap-mmc-hw-reset and no-sd, no-sdio property to eMMC
arm64: versal2: Update UFS dt node
arm64: versal2: add power domain and reset entry for usb
arm64: versal2: Add firmware node entry
arm64: versal: Remove additional compatible string next to jedec,spi-nor
arm64: versal2: Add compatible string to support OSPI controller
arm64: versal2: Rename TF-A reserved memory node name
+ defconfig syncup
]
State: pending

--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -441,10 +441,16 @@ dtb-$(CONFIG_ARCH_VERSAL) += \
 	versal-x-ebm-03-revA.dtbo \
 	xilinx-versal-virt.dtb
 dtb-$(CONFIG_ARCH_VERSAL2) += \
+	versal2-emu-rev0.4-el2.dtb \
 	versal2-mini-emmc.dtb \
 	versal2-mini-ospi.dtb \
 	versal2-mini-qspi.dtb \
 	versal2-mini.dtb \
+	versal2-qemu-rev0.1-el3.dtb \
+	versal2-qemu-rev0.1-el2.dtb \
+	versal2-spp-rev0.3-el2.dtb \
+	versal2-spp-rev0.4-el2.dtb \
+	versal2-spp-mmd-rev0.5-el2.dtb \
 	amd-versal2-virt.dtb
 dtb-$(CONFIG_ARCH_VERSAL_NET) += \
 	versal-net-vn-p-b2197-00-revA.dtb \
