arm64: versal2: Enable SCSI
Versal Gen 2 support has been taken from upstream but upstream has
commit b630f8b3aefc ("scsi: Forceably finish migration to DM_SCSI") which
put together CONFIG_SCSI and CONFIG_DM_SCSI. But 2024.01 version has to
enable both to working properly that's why enabling them.

Signed-off-by: Michal Simek <michal.simek@amd.com>
State: pending

--- a/configs/amd_versal2_emu_defconfig
+++ b/configs/amd_versal2_emu_defconfig
@@ -113,6 +113,7 @@ CONFIG_ZYNQ_GEM=y
 CONFIG_POWER_DOMAIN=y
 CONFIG_SCMI_POWER_DOMAIN=y
 CONFIG_RESET_SCMI=y
+CONFIG_SCSI=y
 CONFIG_DM_SCSI=y
 CONFIG_DEBUG_UART_PL011=y
 CONFIG_DEBUG_UART_ANNOUNCE=y
