arm64: versal: Use fpga-region instead of fpga to match dt-schema
Node should match names listed in dt schema.
The patch fixes the following warning:
.../arch/arm64/boot/dts/xilinx/versal-vek280-revB.dtb: fpga: $nodename:0:
 'fpga' does not match '^fpga-region(@.*|-([0-9]|[1-9][0-9]+))?$'
	from schema $id: http://devicetree.org/schemas/fpga/fpga-region.yaml#

Signed-off-by: Michal Simek <michal.simek@amd.com>

--- a/arch/arm/dts/versal.dtsi
+++ b/arch/arm/dts/versal.dtsi
@@ -89,7 +89,7 @@
 		bootph-all;
 	};
 
-	fpga: fpga {
+	fpga: fpga-region {
 		compatible = "fpga-region";
 		fpga-mgr = <&versal_fpga>;
 		#address-cells = <2>;
