--- a/arch/arm/dts/versal.dtsi
+++ b/arch/arm/dts/versal.dtsi
@@ -120,6 +120,38 @@
 		compatible = "xlnx,versal-fpga";
 	};
 
+	sensor0: versal-thermal-sensor {
+		compatible = "xlnx,versal-thermal";
+		#thermal-sensor-cells = <0>;
+		io-channels = <&sysmon0>;
+		io-channel-names = "sysmon-temp-channel";
+	};
+
+	thermal-zones {
+		versal_thermal: versal-thermal {
+			polling-delay-passive = <250>; /* milliseconds */
+			polling-delay = <1000>; /* milliseconds */
+			thermal-sensors = <&sensor0>;
+
+			trips {
+				temp_alert: temp-alert {
+					temperature = <70000>; /* millicelsius */
+					hysteresis = <0>; /* millicelsius */
+					type = "passive";
+				};
+
+				ot_crit: ot-crit {
+					temperature = <125000>; /* millicelsius */
+					hysteresis = <0>; /* millicelsius */
+					type = "critical";
+				};
+			};
+
+			cooling-maps {
+			};
+		};
+	};
+
 	amba: axi {
 		compatible = "simple-bus";
 		#address-cells = <2>;
@@ -519,6 +551,7 @@
 
 		sysmon0: sysmon@f1270000 {
 			compatible = "xlnx,versal-sysmon";
+			#io-channel-cells = <0>;
 			reg = <0x0 0xf1270000 0x0 0x4000>;
 			interrupts = <0 144 4>;
 			xlnx,numchannels = /bits/8 <0>;
