--- a/arch/arm/dts/versal-net-clk-ccf.dtsi
+++ b/arch/arm/dts/versal-net-clk-ccf.dtsi
@@ -13,7 +13,7 @@
 #include <dt-bindings/reset/xlnx-versal-net-resets.h>
 
 / {
-	ref_clk: ref-clk {
+	ref_clk: ref_clk {
 		bootph-all;
 		compatible = "fixed-clock";
 		#clock-cells = <0>;
