--- a/arch/arm/dts/versal-vek280-revB.dts
+++ b/arch/arm/dts/versal-vek280-revB.dts
@@ -19,7 +19,7 @@
 
 	memory: memory@0 {
 		device_type = "memory";
-		reg = <0 0 0 0x80000000>, <0x8 0x0 0x7 0x80000000>; /* 32GB */
+		reg = <0 0 0 0x80000000>, <0x8 0x00000000 0x1 0x80000000>; /* 2GB + 6GB */
 	};
 
 	chosen {
