--- a/arch/arm/dts/versal-net.dtsi
+++ b/arch/arm/dts/versal-net.dtsi
@@ -372,6 +372,7 @@
 			reg = <0 0xebd00000 0 0x1000>;
 			interrupts = <0 72 4>;
 			clock-names = "clk_main", "clk_apb";
+			/* iommus = <&smmu 0x210>; */
 			#dma-cells = <1>;
 			xlnx,bus-width = <64>;
 		};
@@ -382,6 +383,7 @@
 			reg = <0 0xebd10000 0 0x1000>;
 			interrupts = <0 73 4>;
 			clock-names = "clk_main", "clk_apb";
+			/* iommus = <&smmu 0x212>; */
 			#dma-cells = <1>;
 			xlnx,bus-width = <64>;
 		};
@@ -392,6 +394,7 @@
 			reg = <0 0xebd20000 0 0x1000>;
 			interrupts = <0 74 4>;
 			clock-names = "clk_main", "clk_apb";
+			/* iommus = <&smmu 0x214>; */
 			#dma-cells = <1>;
 			xlnx,bus-width = <64>;
 		};
@@ -402,6 +405,7 @@
 			reg = <0 0xebd30000 0 0x1000>;
 			interrupts = <0 75 4>;
 			clock-names = "clk_main", "clk_apb";
+			/* iommus = <&smmu 0x216>; */
 			#dma-cells = <1>;
 			xlnx,bus-width = <64>;
 		};
@@ -412,6 +416,7 @@
 			reg = <0 0xebd40000 0 0x1000>;
 			interrupts = <0 76 4>;
 			clock-names = "clk_main", "clk_apb";
+			/* iommus = <&smmu 0x218>; */
 			#dma-cells = <1>;
 			xlnx,bus-width = <64>;
 		};
@@ -422,6 +427,7 @@
 			reg = <0 0xebd50000 0 0x1000>;
 			interrupts = <0 77 4>;
 			clock-names = "clk_main", "clk_apb";
+			/* iommus = <&smmu 0x21A>; */
 			#dma-cells = <1>;
 			xlnx,bus-width = <64>;
 		};
@@ -432,6 +438,7 @@
 			reg = <0 0xebd60000 0 0x1000>;
 			interrupts = <0 78 4>;
 			clock-names = "clk_main", "clk_apb";
+			/* iommus = <&smmu 0x21C>; */
 			#dma-cells = <1>;
 			xlnx,bus-width = <64>;
 		};
@@ -442,6 +449,7 @@
 			reg = <0 0xebd70000 0 0x1000>;
 			interrupts = <0 79 4>;
 			clock-names = "clk_main", "clk_apb";
+			/* iommus = <&smmu 0x21E>; */
 			#dma-cells = <1>;
 			xlnx,bus-width = <64>;
 		};
@@ -473,6 +481,7 @@
 			interrupts = <0 39 4>, <0 39 4>;
 			clock-names = "pclk", "hclk", "tx_clk", "rx_clk",
 				      "tsu_clk";
+			/* iommus = <&smmu 0x234>; */
 		};
 
 		gem1: ethernet@f19f0000 {
@@ -482,6 +491,7 @@
 			interrupts = <0 41 4>, <0 41 4>;
 			clock-names = "pclk", "hclk", "tx_clk", "rx_clk",
 				      "tsu_clk";
+			/* iommus = <&smmu 0x235>; */
 		};
 
 		gic: interrupt-controller@e2000000 {
@@ -568,6 +578,7 @@
 			reg = <0 0xf1010000 0 0x10000>,
 			      <0 0xc0000000 0 0x20000000>;
 			interrupts = <0 182 4>;
+			/* iommus = <&smmu 0x245>; */
 			cdns,fifo-depth = <256>;
 			cdns,fifo-width = <4>;
 			cdns,is-dma = <1>; /* u-boot specific */
@@ -581,6 +592,7 @@
 			reg = <0 0xf1030000 0 0x1000>; /* missing one more reg range - checking with Sai */
 			interrupts = <0 183 4>;
 			clock-names = "ref_clk", "pclk";
+			/* iommus = <&smmu 0x244>; */
 		};
 
 		rtc: rtc@f12a0000 {
@@ -598,6 +610,7 @@
 			reg = <0 0xf1040000 0 0x10000>;
 			interrupts = <0 184 4>;
 			clock-names = "clk_xin", "clk_ahb", "gate";
+			/* iommus = <&smmu 0x242>; */
 			#clock-cells = <1>;
 			clock-output-names = "clk_out_sd0", "clk_in_sd0";
 		};
@@ -608,6 +621,7 @@
 			reg = <0 0xf1050000 0 0x10000>;
 			interrupts = <0 186 4>;
 			clock-names = "clk_xin", "clk_ahb", "gate";
+			/* iommus = <&smmu 0x243>; */
 			#clock-cells = <1>;
 			clock-output-names = "clk_out_sd1", "clk_in_sd1";
 		};
@@ -716,6 +730,7 @@
 				reg = <0 0xf1b00000 0 0x10000>;
 				interrupt-names = "host", "peripheral", "otg", "wakeup";
 				interrupts = <0 29 4>, <0 29 4>, <0 33 4>, <0 98 4>;
+				/* iommus = <&smmu 0x230>; */
 				snps,dis_u2_susphy_quirk;
 				snps,dis_u3_susphy_quirk;
 				snps,quirk-frame-length-adjustment = <0x20>;
@@ -742,6 +757,7 @@
 				reg = <0x0 0xf1c00000 0x0 0x10000>;
 				interrupt-names = "host", "peripheral", "otg", "wakeup";
 				interrupts = <0 34 4>, <0 34 4>, <0 38 4>, <0 99 4>;
+				/* iommus = <&smmu 0x232>; */
 				snps,dis_u2_susphy_quirk;
 				snps,dis_u3_susphy_quirk;
 				snps,quirk-frame-length-adjustment = <0x20>;
