arm64: versal: Add DT description for vm-p-m1369
It is another internal development platform which is using x-prc-01-revA
card because all MIOs from Versal are connected to it.
The only important thing is to make sure that all these IPs are working
with new baseboard. DDR memory is connected to DIMM connector that's why
only 4GB of memory is described. It should be safe minimum of memory used
on the board and of course memory size can change. In specific
configuration board should have at least 16GB of memory.

Signed-off-by: Michal Simek <michal.simek@amd.com>
State: pending

--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -509,6 +509,8 @@ dtb-$(CONFIG_ARCH_VERSAL) += \
 	versal-vc-p-a2197-00-revA-x-prc-04-revA.dtb \
 	versal-vc-p-a2197-00-revA-x-prc-04-revA-ospi.dtb \
 	versal-vc-p-a2197-00-revA-x-prc-05-revA.dtb \
+	versal-vm-p-m1369-00-revA.dtb \
+	versal-vm-p-m1369-00-revA-x-prc-01-revA.dtb \
 	versal-vek280-revA.dtb \
 	versal-vek280-revB.dtb \
 	versal-vhk158-revA.dtb \
