arm64: versal: Add DT support for V80 rev1.0 board
Add DT support for Versal V80 rev1.0 board and also update
xilinx_versal_virt_defconfig with newly added versal-v80-rev1.0.dts.

This is configuration which is targeting blank board. Pretty much
standalone configuration without any prebuild firmware where APU is in
charge over all resources. This is not covering AVED configuration.

There are shared reset gpios for i2c devices that's why they are commented
in DT. Interrupt line is described but it is shared across several devices.
It is up to drivers if they are supporting shared IRQ lines. If not drivers
should be extended or interrupt description from i2c devices should be
removed from DT.

Board has 32GB of memory but base design has only 4GB enabled that's why
only 4GB is described. With DTG in place memory will be updated based on
every design.

Board has a lot of gpios for controlling or signalling statuses that's why
gpio-line-names property are describing all useful one. Names are taken
from schematics and libgpiod should be able to identify them easily.

Signed-off-by: Sandeep Gundlupet Raju <sandeep.gundlupet-raju@amd.com>
Signed-off-by: Michal Simek <michal.simek@amd.com>
State: pending

--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -492,6 +492,7 @@ dtb-$(CONFIG_ARCH_VERSAL) += \
 	versal-mini-qspi-x2-single.dtb \
 	versal-mini-qspi-x2-stacked.dtb \
 	versal-v350-revA.dtb \
+	versal-v80-rev1.0.dtb \
 	versal-vck190-revA.dtb \
 	versal-vck190-revA-x-ebm-01-revA.dtb \
 	versal-vck190-revA-x-ebm-02-revA.dtb \
