arm64: versal2: fix the USB ref clock frequency
The default frequency is set to lower frequency, with this frequency
we see a violation in SOF generation methodology which interims causing
port babble issue. To fix the set ref clock to 20Mhz to ensure REFCLKPER
(NSEC_PER_SEC/rate) is within the programmable maximum value of 62ns.

Signed-off-by: Radhey Shyam Pandey <radhey.shyam.pandey@amd.com>

--- a/arch/arm/dts/versal2-spp-rev0.3-el2.dts
+++ b/arch/arm/dts/versal2-spp-rev0.3-el2.dts
@@ -12,6 +12,7 @@
 
 #define CLOCK_FREQ	822500
 #define CLOCK_QSPI_FREQ	20000000
+#define CLOCK_USB_FREQ	20000000
 
 / {
 	compatible = "amd,versal2-spp", "amd,versal2";
@@ -313,14 +314,14 @@
 
 &usb1 {
 	status = "okay";
-	assigned-clock-rates = <CLOCK_FREQ>, <CLOCK_FREQ>;
+	assigned-clock-rates = <CLOCK_USB_FREQ>, <CLOCK_USB_FREQ>;
 };
 
 &dwc3_1 {
 	status = "okay";
 	dr_mode = "host";
 	maximum-speed = "high-speed";
-	assigned-clock-rates = <CLOCK_FREQ>;
+	assigned-clock-rates = <CLOCK_USB_FREQ>;
 };
 
 &wwdt0 {
