arm64: versal2: Update UFS dt node
Update UFS dt node with the following details
- Use correct compatible(amd,versal2-ufs) and remove unwanted
compatible strings.
- Add interrupt property.
- Change the "freq-table-hz" property value to zero as clock settings
are not needed to be set by the UFS Platform/core driver. In AMD/Xilinx
usecases clock values will be set by either PLM or fixed clock source will
be used. This property need to be defined with value 0 to set the proper
HCLKDIV value in the host controller.
- Remove "dma-coherent" property as this need to be added only when CCI
is enabled in the design, this is not supported on prototyping platforms.
- Add UFS PHY reset support.

Signed-off-by: Sai Krishna Potthuri <sai.krishna.potthuri@amd.com>

--- a/arch/arm/dts/versal2-scmi.dtsi
+++ b/arch/arm/dts/versal2-scmi.dtsi
@@ -315,7 +315,7 @@
 		 <&scmi_clk CLK_UFS0_2>;
 	assigned-clocks = <&scmi_clk CLK_UFS0_0>, <&scmi_clk CLK_UFS0_1>,
 			  <&scmi_clk CLK_UFS0_2>;
-	resets = <&scmi_reset RESET_UFS0_0>;
+	resets = <&scmi_reset RESET_UFS0_0>, <&scmi_reset RESET_UFSPHY_0>;
 };
 
 &usb0 {
