arm64: versal2: Add firmware node entry
USB DWC3 Linux driver uses PM interface APIs to communicate with platform
management unit. In the absence of firmware driver probe these PM APIs
return -ENODEV and the DWC3 probe fails. To allow the USB DWC3 probe add
versal2 firmware node.

Signed-off-by: Radhey Shyam Pandey <radhey.shyam.pandey@amd.com>

--- a/arch/arm/dts/versal2-scmi.dtsi
+++ b/arch/arm/dts/versal2-scmi.dtsi
@@ -37,6 +37,11 @@
 	};
 
 	firmware {
+		versal2-firmware {
+			compatible = "xlnx,versal-firmware";
+			method = "smc";
+		};
+
 		scmi: scmi { /* Should be injected by firmware */
 			compatible = "arm,scmi-smc";
 			arm,smc-id = <0xc200ffff>;
