arm: dts: Add cap-mmc-hw-reset and no-sd, no-sdio property to eMMC
Add "cap-mmc-hw-reset" property to the eMMC DT node to perform the
eMMC device hardware reset.
Also, add "no-sd", "no-sdio" properties to eMMC DT node to skip
unwanted sd, sdio related commands during initialization for eMMC
device as this may lead to unnecessary register dump.

Signed-off-by: Paul Alvin <alvin.paulp@amd.com>
Message-ID: <20240911133616.7761-1-alvin.paulp@amd.com>

--- a/arch/arm/dts/versal2-spp-rev0.4-el2.dts
+++ b/arch/arm/dts/versal2-spp-rev0.4-el2.dts
@@ -194,6 +194,9 @@
 	bus-width = <8>;
 	disable-wp;
 	non-removable;
+	no-sd;
+	no-sdio;
+	cap-mmc-hw-reset;
 	xlnx,mio-bank = <0>;
 	no-mmc-hs400;
 	assigned-clock-rates = <CLOCK_FREQ>, <CLOCK_FREQ>, <CLOCK_FREQ>;
