arm64: versal: Remove additional compatible string next to jedec,spi-nor
Based on dt schema there is no need to specify other compatible strings
that's why use only generic one to match dt-schema.

Signed-off-by: Michal Simek <michal.simek@amd.com>

--- a/arch/arm/dts/versal2-spp-rev0.3-el2.dts
+++ b/arch/arm/dts/versal2-spp-rev0.3-el2.dts
@@ -205,7 +205,7 @@
 	#size-cells = <0>;
 
 	flash@0 {
-		compatible = "mt35xu02g", "micron,m25p80", "jedec,spi-nor";
+		compatible = "jedec,spi-nor";
 		spi-max-frequency = <50000>;
 		spi-rx-bus-width = <8>;
 		spi-tx-bus-width = <8>;
