--- a/arch/arm/dts/versal-v80-rev1.0.dts
+++ b/arch/arm/dts/versal-v80-rev1.0.dts
@@ -46,7 +46,7 @@
 	#size-cells = <0>;
 
 	ospi_flash: flash@0 {
-		compatible = "mt35xu02g", "micron,m25p80", "jedec,spi-nor";
+		compatible = "jedec,spi-nor";
 		reg = <0>;
 		#address-cells = <1>;
 		#size-cells = <1>;
