arm64: zynqmp: Add description for SOM based SC on vr-r-a2488-00
Instead of ZynqMP placed on PCB as System Controller (SC) K24 SOM is used
instead. All required circuit for SOM are present and are described in K24
DT (uart1 for example). Describe i2c intrastructure and also ethernet phy
connected on base board.

Signed-off-by: Michal Simek <michal.simek@amd.com>

--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -496,7 +496,9 @@ dtb-$(CONFIG_ARCH_ZYNQMP) += zynqmp-sc-vn-p-b2197-00-revA.dtb
 dtb-$(CONFIG_ARCH_ZYNQMP) += zynqmp-sc-vm-p-b1369-00-revA.dtb
 
 zynqmp-sc-k24-revA-vek385-revA-dtbs := zynqmp-sc-k24-revA.dtb zynqmp-sc-vek385-revA.dtbo
+zynqmp-sc-k24-revA-vr-r-a2488-00-revA-dtbs := zynqmp-sc-k24-revA.dtb zynqmp-sc-vr-r-a2488-00-revA.dtbo
 dtb-$(CONFIG_ARCH_ZYNQMP) += zynqmp-sc-k24-revA-vek385-revA.dtb
+dtb-$(CONFIG_ARCH_ZYNQMP) += zynqmp-sc-k24-revA-vr-r-a2488-00-revA.dtb
 
 zynqmp-scm-revA-ve-p-a2112-00-revA-dtbs := zynqmp-scm-revA.dtb zynqmp-sc-ve-p-a2112-00-revA.dtbo
 dtb-$(CONFIG_ARCH_ZYNQMP) += zynqmp-scm-revA-ve-p-a2112-00-revA.dtb
