arm64: versal2: Correct the UFS clock values
Update the UFS clock values for QEMU and SPP platforms as per the
expected range.
- "ufs_phy_clk" and "ufs_ref_pclk" to 26MHz.
- "ufs_core_clk" to 100MHz.

Signed-off-by: Sai Krishna Potthuri <sai.krishna.potthuri@amd.com>
Message-ID: <20241004105428.600741-1-sai.krishna.potthuri@amd.com>
State: pending

--- a/arch/arm/dts/versal2-qemu-rev0.1-el3.dts
+++ b/arch/arm/dts/versal2-qemu-rev0.1-el3.dts
@@ -34,6 +34,13 @@
 		};
 	};
 
+	clk26000: clk26000 {
+		compatible = "fixed-clock";
+		#clock-cells = <0>;
+		clock-frequency = <26000000>;
+		bootph-all;
+	};
+
 	clk100000: clk100000 {
 		compatible = "fixed-clock";
 		#clock-cells = <0>;
@@ -102,5 +109,5 @@
 
 &ufshc {
 	status = "okay";
-	clocks = <&clk100000>, <&clk100000>, <&clk100000>;
+	clocks = <&clk100000>, <&clk26000>, <&clk26000>;
 };
