--- a/arch/arm/dts/versal2-spp-rev0.4-el2.dts
+++ b/arch/arm/dts/versal2-spp-rev0.4-el2.dts
@@ -410,6 +410,6 @@
 
 &ufshc {
 	status = "okay";
-	assigned-clock-rates = <CLOCK_FREQ>, <CLOCK_FREQ>, <CLOCK_FREQ>;
+	assigned-clock-rates = <100000000>, <26000000>, <26000000>;
 };
 
