--- a/arch/arm/dts/versal2-spp-rev0.3-el2.dts
+++ b/arch/arm/dts/versal2-spp-rev0.3-el2.dts
@@ -400,5 +400,5 @@
 
 &ufshc {
 	status = "okay";
-	assigned-clock-rates = <CLOCK_FREQ>, <CLOCK_FREQ>, <CLOCK_FREQ>;
+	assigned-clock-rates = <100000000>, <26000000>, <26000000>;
 };
