arm64: xilinx: Add description for SC based on K24
SC is system controller board based on K24 SOM which will be available on
multiple internal and evaluation boards. Compare to pure SOM SC
specification is having ethernet over SGMI and fixed MDIO location with
ethernet phy at address 1. Also USB2 and USB3 are enabled.
Serdes configuration is done at start and there is no need to have pinctrl
or phy driver enabled because it is hardcoded by specification.

psu_init is straight copy from sm-k24 for now.

Signed-off-by: Michal Simek <michal.simek@amd.com>

--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -429,6 +429,8 @@ dtb-$(CONFIG_ARCH_ZYNQMP) += \
 	zynqmp-binman-mini.dtb			\
 	zynqmp-sc-revB.dtb			\
 	zynqmp-sc-revC.dtb			\
+	zynqmp-sc-k24-revA.dtb			\
+	zynqmp-binman-sc.dtb			\
 	zynqmp-sm-k24-revA.dtb			\
 	zynqmp-smk-k24-revA.dtb			\
 	zynqmp-sm-k26-revA.dtb			\
