--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -278,6 +278,9 @@ dtb-$(CONFIG_ARCH_ZYNQMP) += \
 	zynqmp-binman-mini.dtb			\
 	zynqmp-sc-revB.dtb			\
 	zynqmp-sc-revC.dtb			\
+	zynqmp-sc-k24-revA.dtb			\
+	zynqmp-scm-revA.dtb			\
+	zynqmp-binman-sc.dtb			\
 	zynqmp-sm-k24-revA.dtb			\
 	zynqmp-smk-k24-revA.dtb			\
 	zynqmp-sm-k26-revA.dtb			\
@@ -340,6 +343,14 @@ dtb-$(CONFIG_ARCH_ZYNQMP) += zynqmp-sc-vpk180-revA.dtb
 dtb-$(CONFIG_ARCH_ZYNQMP) += zynqmp-sc-vpk180-revB.dtb
 dtb-$(CONFIG_ARCH_ZYNQMP) += zynqmp-sc-vn-p-b2197-00-revA.dtb
 dtb-$(CONFIG_ARCH_ZYNQMP) += zynqmp-sc-vm-p-b1369-00-revA.dtb
+
+zynqmp-sc-k24-revA-vek385-revA-dtbs := zynqmp-sc-k24-revA.dtb zynqmp-sc-vek385-revA.dtbo
+zynqmp-sc-k24-revA-vr-r-a2488-00-revA-dtbs := zynqmp-sc-k24-revA.dtb zynqmp-sc-vr-r-a2488-00-revA.dtbo
+dtb-$(CONFIG_ARCH_ZYNQMP) += zynqmp-sc-k24-revA-vek385-revA.dtb
+dtb-$(CONFIG_ARCH_ZYNQMP) += zynqmp-sc-k24-revA-vr-r-a2488-00-revA.dtb
+
+zynqmp-scm-revA-ve-p-a2112-00-revA-dtbs := zynqmp-scm-revA.dtb zynqmp-sc-ve-p-a2112-00-revA.dtbo
+dtb-$(CONFIG_ARCH_ZYNQMP) += zynqmp-scm-revA-ve-p-a2112-00-revA.dtb
 
 zynqmp-sm-k26-revA-sck-kv-g-revA-dtbs := zynqmp-sm-k26-revA.dtb zynqmp-sck-kv-g-revA.dtbo
 zynqmp-sm-k26-revA-sck-kv-g-revB-dtbs := zynqmp-sm-k26-revA.dtb zynqmp-sck-kv-g-revB.dtbo
