arm64: zynqmp: Set default RTC device at start
For RTC to start to operate there is a need to call the driver. The simple
way to do it is to set default RTC instance which will call the probe and
do basic initialization.

Signed-off-by: Michal Simek <michal.simek@amd.com>
Link: https://lore.kernel.org/r/01155f1555dbd42adc618906629f5fb45754d5a4.1731419926.git.michal.simek@amd.com
State: upstream (253b26a72f93d66a816b5eb109aa3fdb46fb05c7)

--- a/board/xilinx/zynqmp/zynqmp_kria.env
+++ b/board/xilinx/zynqmp/zynqmp_kria.env
@@ -68,6 +68,7 @@ kd240_setup=zynqmp pmufw node 33; zynqmp pmufw node 47
 tpm_setup=tpm autostart;
 
 board_setup=\
+rtc dev 0; \
 zynqmp mmio_write 0xFFCA0010 0xfff 0; \
 if test ${card1_name} = SCK-KD-G; then run kd240_setup; fi;\
 run tpm_setup
