arm64: xilinx: Add description for SCM
SCM is system controller used on internal characterization boards. It is
based on k26 som with additional peripherals and partially compatible
with SC k24 design. The main difference is 4GB memory instead of 2GB.

Signed-off-by: Michal Simek <michal.simek@amd.com>

--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -430,6 +430,7 @@ dtb-$(CONFIG_ARCH_ZYNQMP) += \
 	zynqmp-sc-revB.dtb			\
 	zynqmp-sc-revC.dtb			\
 	zynqmp-sc-k24-revA.dtb			\
+	zynqmp-scm-revA.dtb			\
 	zynqmp-binman-sc.dtb			\
 	zynqmp-sm-k24-revA.dtb			\
 	zynqmp-smk-k24-revA.dtb			\
