--- a/arch/arm/dts/Makefile
+++ b/arch/arm/dts/Makefile
@@ -498,6 +498,9 @@ dtb-$(CONFIG_ARCH_ZYNQMP) += zynqmp-sc-vm-p-b1369-00-revA.dtb
 zynqmp-sc-k24-revA-vek385-revA-dtbs := zynqmp-sc-k24-revA.dtb zynqmp-sc-vek385-revA.dtbo
 dtb-$(CONFIG_ARCH_ZYNQMP) += zynqmp-sc-k24-revA-vek385-revA.dtb
 
+zynqmp-scm-revA-ve-p-a2112-00-revA-dtbs := zynqmp-scm-revA.dtb zynqmp-sc-ve-p-a2112-00-revA.dtbo
+dtb-$(CONFIG_ARCH_ZYNQMP) += zynqmp-scm-revA-ve-p-a2112-00-revA.dtb
+
 zynqmp-sm-k26-revA-sck-kv-g-revA-dtbs := zynqmp-sm-k26-revA.dtb zynqmp-sck-kv-g-revA.dtbo
 zynqmp-sm-k26-revA-sck-kv-g-revB-dtbs := zynqmp-sm-k26-revA.dtb zynqmp-sck-kv-g-revB.dtbo
 zynqmp-smk-k26-revA-sck-kv-g-revA-dtbs := zynqmp-smk-k26-revA.dtb zynqmp-sck-kv-g-revA.dtbo
